Revert "Fix icon spacing"
This reverts commit 53878f15de058b33caf50523be54dd9a679a0dcc.

--- a/src/MudBlazor/Styles/components/_list.scss
+++ b/src/MudBlazor/Styles/components/_list.scss
@@ -90,7 +90,7 @@
 .mud-list-item-icon {
   color: var(--mud-palette-action-default);
   display: inline-flex;
-  padding-right: 10px;
+  min-width: 56px;
   flex-shrink: 0;
 }
 
